added states to User and Character
